# numtemastudio

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  ORGANIZATION.md  README.md  VERCEL_READY.md  VERCEL_SETUP.md  deploy-vercel.sh  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/agents/: __init__.py
backend/api/: __init__.py  main.py
backend/examples/: agent_builder_example.py  builder_tools_example.py
backend/models/: __init__.py
backend/pocketflow/: __init__.py
backend/tests/: __init__.py  test_studio.py
backend/tools/: __init__.py  builder_tools.py
backend/utils/: __init__.py  llm.py
backend/workflows/: __init__.py
docs/: AGENT_BUILDER_SUMMARY.md  BUILDER_TOOLS_SUMMARY.md  FRONTEND_PLAN.md  FRONTEND_SETUP_COMPLETE.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PROJECT_STATUS.md  README.md  VERCEL_DEPLOYMENT.md  agent_builder.md  architecture_with_builder.md  builder_tools.md  vercelflow
frontend/: PHASE_1_COMPONENTS.md  README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/agents/: AgentCard.tsx
frontend/src/components/common/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Sidebar.tsx  Toast.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/workflows/: WorkflowNode.tsx
frontend/src/hooks/: useToast.ts
frontend/src/pages/: AgentsPage.tsx  BuilderPage.tsx  Dashboard.tsx  SettingsPage.tsx  WorkflowsPage.tsx
frontend/src/services/: agentService.ts  api.ts  workflowService.ts
frontend/src/store/: agentStore.ts  workflowStore.ts
frontend/src/styles/: globals.css
